Bug 1654995 - Chunk starting offset wrong after m_chunkSize changes. r=mkmelin

This caused some attachments to have missing data.